# YouTube-Downloader

./: .gitignore  README.md  pyproject.toml  yt-download.py  ytdl
src/yt_download/: cli.py  gui.py
tests/: __init__.py  test_cli.py  test_gui.py
